--- a/app/style.css
+++ b/app/style.css
@@ -5,13 +5,15 @@
 
 html, body {
   height: 100%;
-  margin: 0;
   font-size: 16px; }
 
 .main {
+  width: 90%;
   max-width: 960px;
   margin-left: auto;
-  margin-right: auto; }
+  margin-right: auto;
+  display: flex;
+  flex-direction: column; }
 
 .header {
   display: flex;
@@ -42,29 +44,28 @@ html, body {
   justify-content: flex-start;
   background-color: gray; }
   .navbar__button {
-    height: 2rem;
-    width: 5rem;
+    height: 2em;
+    width: 5em;
     font-size: 1.2rem;
     display: flex;
     justify-content: center;
     align-items: center;
     color: white;
     background-color: gray;
-    padding: 4px; }
+    padding: 0.5em; }
     .navbar__button--active {
       background-color: red; }
 
 .hero-wrapper {
   width: 100%;
   padding-bottom: 3em;
-  display: flex;
   border-bottom: 1px solid black; }
 
 .hero {
   width: 100%;
   height: 20rem;
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("Images/AR-200319759.jpg");
-  background-position: center;
+  background-position: top center;
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
@@ -96,16 +97,19 @@ html, body {
   opacity: 40%; }
 
 .feature {
-  margin-top: 16px;
+  margin-top: 1em;
   width: 100%;
   display: flex;
+  flex: 1;
   padding-bottom: 3em;
   flex-direction: column;
   justify-content: center;
-  align-items: center; }
+  align-items: center;
+  border-bottom: 1px solid black; }
 
 .feature-header {
   width: 100%;
+  font-size: 1.5rem;
   background-color: red;
   color: white;
   padding: 1em;
@@ -133,6 +137,7 @@ html, body {
     background-color: gray; }
 
 .footer {
+  margin-top: 1em;
   width: 100%;
   padding-bottom: 3em;
   display: flex;
@@ -143,6 +148,12 @@ html, body {
   display: flex;
   flex-direction: column;
   color: white; }
+  .contact-us .contact-us--header {
+    font-size: 1.5rem;
+    padding: 0.5em; }
+  .contact-us .contact-us--send-message {
+    font-size: 1.5rem;
+    padding: 0.5em; }
 
 .sitemap {
   flex-grow: 1; }
