--- a/app/style.scss
+++ b/app/style.scss
@@ -5,15 +5,16 @@
 }
 html, body {
   height: 100%;
-  margin: 0;
   font-size: 16px;
 }
 
-
 .main {
+  width: 90%;
   max-width: 960px;
   margin-left: auto;
   margin-right: auto;
+  display: flex;
+  flex-direction: column;
 }
 
 .header {
@@ -50,15 +51,15 @@ html, body {
   background-color: gray;
 
   &__button {
-    height: 2rem;
-    width: 5rem;
+    height: 2em;
+    width: 5em;
     font-size: 1.2rem;
     display: flex;
     justify-content: center;
     align-items: center;
     color: white;
     background-color: gray;
-    padding: 4px;
+    padding: 0.5em;
 
     &--active {
       background-color: red;
@@ -68,9 +69,7 @@ html, body {
 
 .hero-wrapper {
   width: 100%;
-
   padding-bottom: 3em;
-  display: flex;
   border-bottom: 1px solid black;
 }
 
@@ -78,7 +77,7 @@ html, body {
   width: 100%;
   height: 20rem;
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("Images/AR-200319759.jpg");
-  background-position: center;
+  background-position: top center;
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
@@ -119,20 +118,21 @@ html, body {
   opacity: 40%;
 }
 
-
-
 .feature {
-  margin-top: 16px;
+  margin-top: 1em;
   width: 100%;
   display: flex;
+  flex: 1;
   padding-bottom: 3em;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  border-bottom: 1px solid black;
 }
 
 .feature-header {
   width: 100%;
+  font-size: 1.5rem;
   background-color: red;
   color: white;
   padding: 1em;
@@ -167,10 +167,12 @@ html, body {
 }
 
 .footer {
+  margin-top: 1em;
   width: 100%;
   padding-bottom: 3em;
   display: flex;
   background-color: #15151f;
+
 }
 
 .contact-us {
@@ -178,6 +180,17 @@ html, body {
   display: flex;
   flex-direction: column;
   color: white;
+
+  #{&}--header{
+    font-size: 1.5rem;
+    padding: 0.5em;
+  }
+
+  #{&}--send-message {
+    font-size: 1.5rem;
+    padding: 0.5em;
+  }
+
 }
 .sitemap {
   flex-grow: 1;
